# MtG-OCR

./: .gitignore  LICENSE  README.md  Readme.md.txt  UI_identification.py  card_extraction.py  card_identification.py  configuration_handler.py  img_from_adb.py  jasdfasdf  parameters.txt  process_card.py  process_carrd single coordinates.py  process_rois.py  requirements.txt  setup.cfg  setup.py  testingpreprocessing.py  to_dataframe.py  unt_1.py
.not implemented/: Readme.md.txt  card_identification.1py.py  img_from_adb_wireless.py  main.py  main_old.py  params.txt  process_carrd single coordinates.py
config/: all_sets.json  parameters.txt
data/: defaultconfig.txt  parameters.txt
data/Card_Identification/: results_20240519_231450.txt
data/Card_Identification/processed_ROIs/: .gitkeep
data/Card_Identification/results/: 20240112_095051.txt  identified_cards20240119_115151.txt  (+1 more)
src/: Deck_Identification.py
src/Card_Identification/: CSV postprocessing.ipynb  card_extraction.py  check_img_orientation.py  closest_cards.txt  configuration_handler.py  copy_img_to_data.py  cube_find_duplicates.py  image_collection.py  img_from_adb.py  main_Card_Identification.py  path_manager.py  process_card.py  process_results.py  process_rois.py  save_results.py  testingpreprocessing.py  user_dialog_cardname.py
src/MtG-OCR/: __init__.py  adb_push.py  configuration_handler.py  img_from_adb.py  main.py  process_card.py  process_rois.py  testingpreprocessing.py
tests/: __init__.py  test_card_identification.py  test_configuration_handler.py
tests/Card_Identification/: test_card_extraction.py  test_configuration_handler.py  test_path_manager.py  test_process_card.py  test_process_rois.py
tests/tests_card_identification/: test_card_extraction.py  test_configuration_handler.py  test_path_manager.py  test_process_card.py  test_process_rois.py
(+3 files in other folders)
