# -*- coding: utf-8 -*-
"""
setup.cfg
adapted from 
https://github.com/yngvem/python-project-structure?tab=readme-ov-file#structuring-a-repository

05.01.2024

author: Felix Scope
"""

[metadata]
name = Mtg-OCR
version = <version number: 0.0.0>
license = <MIT>
description = <A short description>
long_description = file: README.rst
author = <Felix Scope>
author_email = <mtg-ocr@noreply.github.com>
classifiers=

   <Development Status :: 2 - Pre-Alpha>
   <classifier 2>
   <...>
   <classifier m>

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   <imutils==0.5.4>
    <numpy==1.25.1>
    <opencv_python==4.8.0.74>
    <pytesseract==0.3.10>
    <python_Levenshtein==0.23.0>
    <Requests==2.31.0>
    <setuptools==67.8.01>
  
[options.packages.find]
where=src