[metadata]
name = MtG-OCR
version = 0.1.0
author = Felix Scope
author_email = mtg-ocr@noreply.github.com
url = https://github.com/fescofesco/MtG-OCR
license = MIT
description = Program identifies MtG cards from images using opencv, pytesseract and Levenshtein distances. The program creates `.csv` files for cubecobra and scryfall card files as output.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Windowsx64

[options]
packages = find:
package_dir =
    = .

include_package_data = True
install_requires =
    auto_mix_prep==0.2.0
    colorama==0.4.6
    fuzzywuzzy==0.18.0
    imutils==0.5.4
    numpy==1.26.3
    opencv_python==4.8.0.74
    pytesseract==0.3.10
    python_Levenshtein==0.23.0
    Requests==2.31.0


[options.packages.find]
where = src tests


[wheel]
universal = 1